[package]
name = "pin-weak"
version = "1.0.1"
authors = ["Olivier Goffart <ogoffart@sixtyfps.io>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Small wrapper around an equivalent of Pin<Weak<T>>"
keywords = ["pin", "weak", "rc", "arc"]
categories = [ "memory-management" ]
repository = "https://github.com/sixtyfpsui/pin-weak"
documentation = "https://docs.rs/pin-weak"

[features]
# Support for std::sync::arc
sync = []
default = ["sync"]

