[package]
name = "pin-weak"
version = "1.1.0"
authors = ["Olivier Goffart <olivier.goffart@slint-ui.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Small wrapper around an equivalent of Pin<Weak<T>>"
keywords = ["pin", "weak", "rc", "arc"]
categories = [ "memory-management" ]
repository = "https://github.com/slint-ui/pin-weak"
documentation = "https://docs.rs/pin-weak"

[features]
## Support for `std::sync::Arc`
sync = []
default = ["sync"]

